<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_login"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_activity_login" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/activity_maps"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_activity_maps" />

</menu>