<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">


    <activity
        android:id="@+id/activity_login"
        android:name="com.example.appseniorproject.ui.login.LoginActivity"
        android:label="Login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appseniorproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_route" />


    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.appseniorproject.MapsFragment"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appseniorproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appseniorproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_contribute" />

</navigation>